Add logic to  retrieve reward confirmations
