# loyalty-engine/openapi.yaml
@@ -107,6 +107,32 @@ paths:
               schema:
                 type: string
                 example: "failed to fetch reward confirmation"
+  /reward-confirmations:
+    get:
+      summary: Get reward confirmations.
+      parameters:
+      - name: userId
+        in: query
+        description: User ID
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: A list of reward confirmations.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RewardConfirmationWithQR'
+        '500':
+          description: Internal server error.
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "failed to fetch reward confirmation"
   /qr-code:
     get:
       summary: Get QR code.
@@ -130,6 +156,26 @@ paths:
             image/png:
               schema:
                 type: object
+        '500':
+          description: Internal server error.
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "failed to fetch QR code"
+  /qr-codes:
+    get:
+      summary: Get QR codes.
+      parameters:
+      - name: userId
+        in: query
+        description: User ID
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Status OK.
         '500':
           description: Internal server error.
           content:
@@ -205,4 +251,16 @@ components:
         rewardConfirmationNumber:
           type: string
           description: Reward confirmation number.
+    RewardConfirmationWithQR:
+      type: object
+      properties:
+        userId:
+          type: string
+          description: Unique user identifier.
+        rewardId:
+          type: string
+          description: ID of the reward.
+        qrCode:
+          type: string
+          description: Encoded QR code.
     
